Prevent from overflowing the header on non-catalog non-home pages

--- a/static/assets/sass/_scaffolds.sass
+++ b/static/assets/sass/_scaffolds.sass
@@ -305,6 +305,7 @@ $chief-panel-height: 550px
 
 	.content-panel-body-header
 		padding: 32px 0px 20px 24px
+		overflow: hidden
 
 	&.resource-browse
 		background-color: #efefef
